--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@
     text-decoration: none;
 }
 :root {
-    --primary-color: #bc9667;
-    --secondary-color: #edeae3;
-    --text-color: #1b1b1b;
-    --bg-color: #fff;
+    --primary-color: #007F5F;
+    --secondary-color: #679436;
+    --text-color: #2B2B2B;
+    --bg-color: #F5F7F4;
 
     --box-shadow: 2px 2px 10px 14px rgb(14 55 54 / 15%);
 }
