Update home section css
Added home section css

--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@
 
     --box-shadow: 2px 2px 10px 14px rgb(14 55 54 / 15%);
 }
+section{
+    padding: 50px 100px;
+}
 img{
     width: 100%; 
 }
@@ -95,4 +98,12 @@ header{
 .search-box input::placeholder{
     font-size: 1rem;
     font-weight: 500;
+}
+.home{
+    width: 100%;
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(17rem, auto));
+    align-items: center;
+    gap: 1.5rem
 }
