--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 :root {
     --primary-color: #007F5F;
     --secondary-color: #B2FFB2;
-    --text-color: #2B2B2B;
+    --text-color: #510202;
     --bg-color: #C1E1C1;
 
     --box-shadow: 2px 2px 10px 14px rgb(14 55 54 / 15%);
@@ -106,4 +106,11 @@ header{
     grid-template-columns: repeat(auto-fit, minmax(17rem, auto));
     align-items: center;
     gap: 1.5rem
+}
+.home-text h1{
+    font-family: open-sans, sans-serif;
+    font-size: 3.4rem;
+    color: var(--primary-color);
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
