--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@
 }
 :root {
     --primary-color: #007F5F;
-    --secondary-color: #B2FFB2;
+    --secondary-color: #60bc60;
     --text-color: #510202;
-    --bg-color: #C1E1C1;
+    --bg-color: #73a973;
 
     --box-shadow: 2px 2px 10px 14px rgb(14 55 54 / 15%);
 }
@@ -35,7 +35,7 @@ header{
     justify-content: space-between;
     align-items: center;
     border: 1px;
-    padding: 7px 100px;
+    padding: 3px 100px;
     background-color: var(--bg-color);
     transition: 0.5s linear;
 }
@@ -47,13 +47,14 @@ header{
 }
 .navbar a{
     padding: 8px 17px;
-    color: var(--text-color);
-    font-size:  0.7rem;
+    color: white;
+    font-size:  0.8rem;
     text-transform: uppercase;
-    font-weight: 900;
+    font-weight: 1000;
 }
 .navbar a:hover{
-    background-color: var(--secondary-color);
+    color: white;
+    background-color: var(--primary-color);
     border-radius: 2rem;
     transition: 0.5s all linear;
 }
@@ -65,7 +66,7 @@ header{
     column-gap: 0.8rem;
 }
 .header-icons .bx{
-    color: var(--primary-color);
+    color: white;
 }
 #menu-icon{
     color: black;
@@ -83,12 +84,12 @@ header{
     width: 100%;
 }
 .search-box.active{
-    top: 110%;
+    top: 100%;
     box-shadow: var(--box-shadow);
     transition: 0.25s all linear;
 }
 .search-box input{
-    padding: 20px;
+    padding: 10px;
     border: none;
     outline: none;
     width: 100%;
@@ -101,7 +102,7 @@ header{
 }
 .home{
     width: 100%;
-    min-height: 100vh;
+    min-height: 130vh;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(17rem, auto));
     align-items: center;
@@ -118,4 +119,15 @@ header{
     font-size: 0.938rem;
     color: var(--text-color);
     margin: 0.5rem 0 1.4rem;
+}
+.btn{
+    padding: 10px 40px;
+    background-color: var(--bg-color);
+    color: white;
+    font-weight: 500;
+    border-radius: 2rem;
+    transition: 0.5s all linear;
+}
+.btn:hover{
+    background: var(--primary-color);
 }
