--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header{
     align-items: center;
     border: 1px;
     padding: 3px 100px;
-    background-color: var(--bg-color);
+    background-color: var(--primary-color);
     transition: 0.5s linear;
 }
 .logo img{
@@ -54,7 +54,7 @@ header{
 }
 .navbar a:hover{
     color: white;
-    background-color: var(--primary-color);
+    background-color: var(--bg-color);
     border-radius: 2rem;
     transition: 0.5s all linear;
 }
@@ -106,12 +106,18 @@ header{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(17rem, auto));
     align-items: center;
-    gap: 1.5rem
+    gap: 1rem
+}
+.home img{
+    width: 90%;
+    height: 90%;
+    object-fit: cover;
+    margin-left: 3rem;
 }
 .home-text h1{
     font-family: open-sans, sans-serif;
     font-size: 3.4rem;
-    color: var(--primary-color);
+    color: var(--bg-color);
     text-transform: uppercase;
     letter-spacing: 1px;
 }
