Update home section
Added space between image and description of the home section.

--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ header{
     width: 90%;
     height: 90%;
     object-fit: cover;
+    margin-left: 3rem;
 }
 .home-text h1{
     font-family: open-sans, sans-serif;
