Update about section css
Display grid to two colums and added gap between about image and paragraphs.

--- a/style.css
+++ b/style.css
@@ -149,3 +149,8 @@ header{
 .btn:hover{
     background: var(--primary-color);
 }
+.about{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(17rem,auto));
+    gap: 2rem;
+}
